--- a/basics/005-functions.html
+++ b/basics/005-functions.html
@@ -92,16 +92,15 @@ Mozilla Developer Network:
         return now.getMonth();
     }
     
+    // the first time that "return" occours it stops 
+    // the other instructions of a function!
     function getCurrentSeason(month) {
         if (month >= 2 && month <= 4) {
             return 'spring';
-
         } else if (month >= 5 && month <= 7) {
             return 'summer';
-
         } else if (month >= 8 && month <= 10) {
             return 'autumn';
-
         } else {
             return 'winter';
         }
