--- a/basics/004-conditionals.html
+++ b/basics/004-conditionals.html
@@ -154,3 +154,51 @@ Mozilla Developer Network:
     
 </body>
 </html>
+
+<!--
+EXERCISE 002-001:
+prompt for user's age and alert if he/she is over/under 50.
+
+EXERCISE 002-002:
+prompt for user's name and trigger an alert only if
+name's first letter is "m".
+
+EXERCISE 002-003:
+prompt for user's name and surname and create the following alerts when the case:
+- you must insert your name!
+- you must insert your surname!
+- your full name must contain more than 10 chars
+- your full name must contain max 20 chars 
+- you can't input a surname which ends with "a"
+
+EXERCISE 002-004:
+propmt for user's age then alert these situations:
+- you are too young to drink beer
+- you are too old to fear the warewolf
+- you are good to get a real job
+
+EXERCISE 002-005:
+prompt for user's age and alert a bad message when ALL these conditions happen:
+- the user is greater than 30
+- the user is lower than 40
+- user's age is even
+
+EXERCISE 002-006:
+prompt for user's age and alert a greeting message when ANY these conditions happen:
+- the user is greater than 30
+- the user is lower than 40
+- user's age is even
+
+EXERCISE 002-007:
+prompt for user's name and age and alert a greeting message when:
+- the 3rd letter of the name is "r"
+- the second digit of the age is "2"
+
+EXERCISE 002-008:
+prompt for user's name and age and alert a greeting message when:
+- the 3rd letter of the name is "r"
+- any of these age conditions
+    - the second digit is "2"
+    - the first letter of the english name of the sum of the first and second digit is "f".
+
+-->
