--- a/basics/005-functions.html
+++ b/basics/005-functions.html
@@ -140,3 +140,35 @@ Mozilla Developer Network:
     
 </body>
 </html>
+
+<!--
+EXERCISE 005-001:
+create a function that sum 2 numbers
+
+EXERCISE 005-002:
+create a function that take 2 numbers, an operator 
+identifier (1=sum, 2=sub,...) and return the math!
+> sum(1,2) => 3
+
+EXERCISE 005-003:
+create a function that take 2 numbers, an operator 
+identifier (1=sum, 2=sub,...) and return the full 
+expression as a string!
+> visualCalc(1,2,1) => "1 + 2 = 3"
+
+EXERCISE 005-004:
+create the function "getCurrentMonthName()" that return 
+the current month name
+
+EXERCISE 005-005:
+create the function "getMonthName(date)" that return the 
+month name of a given date
+
+EXERCISE 005-006:
+simplify "getCurrentMonthName()" to use "getMonthName(date)"
+as part of it's logic.
+
+EXERCISE 005-007:
+create an "initials(name, surname)" function that return user's
+initials or false if name or surname are empty
+-->
