--- a/basics/004-conditionals.html
+++ b/basics/004-conditionals.html
@@ -156,14 +156,14 @@ Mozilla Developer Network:
 </html>
 
 <!--
-EXERCISE 002-001:
+EXERCISE 004-001:
 prompt for user's age and alert if he/she is over/under 50.
 
-EXERCISE 002-002:
+EXERCISE 004-002:
 prompt for user's name and trigger an alert only if
 name's first letter is "m".
 
-EXERCISE 002-003:
+EXERCISE 004-003:
 prompt for user's name and surname and create the following alerts when the case:
 - you must insert your name!
 - you must insert your surname!
@@ -171,32 +171,32 @@ prompt for user's name and surname and create the following alerts when the case
 - your full name must contain max 20 chars 
 - you can't input a surname which ends with "a"
 
-EXERCISE 002-004:
+EXERCISE 004-004:
 propmt for user's age then alert these situations:
 - you are too young to drink beer
 - you are too old to fear the warewolf
 - you are good to get a real job
 
-EXERCISE 002-005:
+EXERCISE 004-005:
 prompt for user's age and alert a bad message when ALL these conditions happen:
 - the user is greater than 30
 - the user is lower than 40
 - user's age is even
 
-EXERCISE 002-006:
+EXERCISE 004-006:
 prompt for user's age and alert a greeting message when ANY these conditions happen:
 - the user is greater than 30
 - the user is lower than 40
 - user's age is even
 
-EXERCISE 002-007:
+EXERCISE 004-007:
 prompt for user's name and age and alert a greeting message when:
 - the 3rd letter of the name is "r"
 - the second digit of the age is "2"
 
-EXERCISE 002-008:
+EXERCISE 004-008:
 prompt for user's name and age and alert a greeting message when:
-- the 3rd letter of the name is "r"
+- the name contains the letter "r"
 - any of these age conditions
     - the second digit is "2"
     - the first letter of the english name of the sum of the first and second digit is "f".
