--- a/basics/003-variables.html
+++ b/basics/003-variables.html
@@ -3,6 +3,7 @@ Javascript - Variables
 ======================
 
 - [MDN console.log](https://developer.mozilla.org/en-US/docs/Web/API/console.log)
+- [MDN string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)
 
 -->
 <!DOCTYPE html>
@@ -62,6 +63,9 @@ create your name, surname and age variables.
 then create a new variable in which to put a presentation sentence like:
 "Hi, I'm Marco Pegoraro and I'm 32 years old!"
 
+EXERCISE 003-001 (b):
+do the above exercise within 1 single line of code
+
 EXERCISE 003-002:
 given a=1, b=2 create the "sum" variable
 
@@ -74,8 +78,15 @@ concatenate a string with a boolean and console log the final type
 concatenate a number with a boolean and console log the final type
 
 EXERCISE 003-005:
-(using variables from 001-001)
+(using variables from 003-001)
 console log how many letters in your name + surname
 console log your name + surname in uppercase / lowercase
 console log you name initials
+
+FOR HOME:
+play with variables, types, operators.
+try to sole expressions, work with string's methods, create
+strange logic expressions combining many operators!
+
+-- never stop learning!
 -->
