--- a/basics/006-arrays.html
+++ b/basics/006-arrays.html
@@ -118,3 +118,41 @@ a progressive number starting from 0, this number is called "index" or "position
     
 </body>
 </html>
+
+<!--
+EXERCISE 006-001:
+create an array with the first 5 natural numbers starting from
+an empty array
+
+EXERCISE 006-002:
+create an array with the first 5 natural numbers starting from
+an empty array WHITHOUT USE "push()"
+
+EXERCISE 006-003:
+given an array of 10 numbers sum the first and the last
+
+EXERCISE 006-004:
+given an array of 10 numbers in random order display it from the
+lower to the greater
+
+EXERCISE 006-005:
+given an array of 10 numbers in random order display it from the
+greater to the lower
+
+EXERCISE 006-006:
+given an array of strings alert a greeting if the last string is
+longher than the second, a warning message if the last string and
+the second are the same item and a error message if the array does not
+have a second item.
+
+EXERCISE 006-007:
+given an array of at least 4 strings remove all but the first and the last
+
+EXERCISE 006-008:
+given an array of at least 4 strings remove all but the first and the last
+-- in one single operation
+
+EXERCISE 006-009:
+given an array of 2 numbers try to obtain the string: "n1 + n2 = sum"
+-- in at least 2 different way of coding it
+-->
