--- a/basics/008-loops.html
+++ b/basics/008-loops.html
@@ -172,3 +172,34 @@ or based on a conditions to verify.
     
 </body>
 </html>
+
+
+<!-- 
+EXERCISE 008-001:
+sum the first 1000 natural numbers.
+
+EXERCISE 008-002:
+write the first 10 letters from alphabet using a FOR loop and it's index.
+
+EXERCISE 008-003:
+add numeric items to an empty array named "numbers" until it reach 10 items.
+
+EXERCISE 008-004:
+calculate the sum, max, min, avg of the "numbers" array
+
+EXERCISE 008-005:
+remove all the odd numbers from the "numbers" array
+
+EXERCISE 008-006:
+create an array of "person" objects (cal it "persons") with a name and age.
+calculate the sum, max, min, avg of the ages in the array.
+calculate the sum, max, min, avg of the names length in the array.
+
+EXERCISE 008-007:
+create a clone of the "persons" array, 
+prove that it is a clone and not just a reference duplication
+
+EXERCISE 008-008:
+create a clone of the first item of the "persons" array, 
+prove that it is a clone and not just a reference duplication
+-->
