hello world exercises

--- a/basics/001-hello-world.html
+++ b/basics/001-hello-world.html
@@ -34,3 +34,15 @@ because "console.log" is a debug tool that does not come with every browser.
     
 </body>
 </html>
+
+<!--
+EXERCISE 001-001: 
+create your own "hello world" web page in which to show your name.
+yse an inline script.
+
+EXERCISE 001-002: 
+with the former exercise try to use "alert" instead of "console.log".
+
+EXERCISE 001-003: 
+transform the former exercise to use a linked script with the same logic.
+-->
