--- a/basics/001-hello-world.html
+++ b/basics/001-hello-world.html
@@ -19,7 +19,7 @@ because "console.log" is a debug tool that does not come with every browser.
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS001 - Hello World</title>
 </head>
 <body>
