--- a/basics/002-hello-world.html
+++ b/basics/002-hello-world.html
@@ -22,7 +22,7 @@ Just try to get an overall understanding of it.
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS002 - Hello World (with DOM)</title>
 </head>
 <body>
