--- a/basics/006-arrays.html
+++ b/basics/006-arrays.html
@@ -11,7 +11,7 @@ a progressive number starting from 0, this number is called "index" or "position
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS006 - Arrays</title>
 </head>
 <body>
