--- a/basics/007-objects.html
+++ b/basics/007-objects.html
@@ -10,7 +10,7 @@ An object is a collection of key:value items.
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS007 - Objects</title>
 </head>
 <body>
