--- a/basics/008-loops.html
+++ b/basics/008-loops.html
@@ -9,7 +9,7 @@ or based on a conditions to verify.
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS008 - Loops</title>
 </head>
 <body>
