--- a/basics/005-functions.html
+++ b/basics/005-functions.html
@@ -12,7 +12,7 @@ Mozilla Developer Network:
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset="utf-8" />
     <title>JS005 - Functions</title>
 </head>
 <body>
