--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
     <!-- // Social -->
     
     <!-- Google Analytics -->
-<!--
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-52966127-2', 'auto');
+    ga('create', 'UA-52991368-2', 'auto');
     ga('send', 'pageview');
     </script>
--->
 
 </head>
 
@@ -51,7 +49,7 @@
 
         <header>
             <a href="http://noblackmagic.com" title="web dev training: javascript, css, html5 tutorials and exercises" id="header-block" class="clearfix">
-                <img id="logo" class="left" alt="PoliteJS Logo" width="75" src="http://www.noblackmagic.com/assets/images/logo.png" />
+                <img id="logo" class="left" alt="PoliteJS Logo" width="75" src="http://noblackmagic.com/assets/images/logo.png" />
                 <div id="title-block" class="left">
                     <h1>NoBlackMagic.com</h1>
                     <p>no evil spells required!</p>
