--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>JSBox - run live JS Exercises!</title>
+    <title>JS Spells | Javascript From Scratch tutorials, examples and exercises</title>
 
     <link rel="stylesheet" href="http://noblackmagic.com/assets/css/nobm.min.css">
 
