close #1 plus hints improvements

--- a/basic/002-variables/index.html
+++ b/basic/002-variables/index.html
@@ -66,7 +66,7 @@
                 <pre>&raquo; make a box and apply the label "name" on it</pre>
                 <hr>
                 <h3>Try It Yourself!</h3>
-                <div data-jsbox data-jsbox-scripts="jsbox-tests.js">
+                <div data-jsbox data-jsbox-scripts="jsbox-tests.js?v1">
                     <pre data-test="testToCreateVariable()">create a variable named "surname"</pre>
                     <pre data-js></pre>
                 </div>
@@ -90,9 +90,9 @@
                 <pre>name = 'Darth Vader';</pre>
                 <hr>
                 <h3>Try It Yourself!</h3>
-                <div data-jsbox data-jsbox-scripts="jsbox-tests.js">
+                <div data-jsbox data-jsbox-scripts="jsbox-tests.js?v1">
                     <pre data-artifact>var name = 'Luke Skywalker';</pre>
-                    <pre data-test="testToAssignContentsToVariables()">variable <code>name</code> <b>already exists</b> and contains "Luke Skywalker", turn it to the dark side of the Force by assigning "Darth Vedar" to the variable <code>name</code>.<br><br>hint &raquo; try to run <code>console.log(name)</code> to investigate the current value of <code>name</code>.</pre>
+                    <pre data-test="testToAssignContentsToVariables()">variable <code>name</code> <b>already exists</b> and contains "Luke Skywalker", turn it to the dark side of the Force by assigning "Darth Vader" to the variable <code>name</code>.<br><br>hint &raquo; try to run <code>console.log(name)</code> to investigate the current value of <code>name</code>.</pre>
                     <pre data-js></pre>
                 </div>
             </section>
@@ -128,8 +128,8 @@ var result = num1 + num2;</pre>
                 </ol>
                 <hr>
                 <h3>Try It Yourself!</h3>
-                <div data-jsbox data-jsbox-scripts="jsbox-tests.js">
-                    <pre data-test="testReadVariableContent()">comple the existing code in order to <strong>create</strong> a <code>fullName</code> variable which should contains "Luke Skywalker"</pre>
+                <div data-jsbox data-jsbox-scripts="jsbox-tests.js?v1">
+                    <pre data-test="testReadVariableContent()">complete the existing code in order to <strong>create</strong> a <code>fullName</code> variable which should contains "Luke Skywalker"</pre>
                     <pre data-js>var name = 'Luke';
 var surname = 'Skywalker';</pre>
                     
