updated with nobm's conditional GA script

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <![endif]-->
     
     <!-- Google Analytics -->
-    <script src="assets/js/ga.js"></script>
+    <script src="//noblackmagic.com/assets/js/qs.min.js?v1"></script>
+    <script src="//noblackmagic.com/assets/js/ga.min.js?v1&ua=UA-52991368-2"></script>
 
 </head>
 
