environment, hello-world, variables

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>JS Spells | Javascript From Scratch tutorials, examples and exercises</title>
 
     <link rel="stylesheet" href="//noblackmagic.com/assets/css/nobm.min.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/addons.css">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
     <!--  Icons -->
@@ -41,7 +42,13 @@
             <section class="start-block-article">
                 <h1>JS Spells <small>Javascript From Scratch</small></h1>
                 <p>
-                    <i>Javascript</i> is the <strong>programming language of the web</strong> from the browser point of view.
+                    <i>Javascript</i> is the <strong>programming language of the Web</strong> from the browser point of view.
+                </p>
+                <p>
+                    <small>
+                        There are no alternatives to it just because all the major browser vendors 
+                        (Chrome, Firfox, Opera, IE) implement only this language in their programs.
+                    </small>
                 </p>
                 <p>
                     The following tutorials will guide you through the learning of this language <strong>from the real bottom of the barrel</strong>.
