--- a/basic/004-variables/index.html
+++ b/basic/004-variables/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>JS Spells | BASIC | expressions, variables, conditionals, functions, arrays, objects, loops</title>
+    <title>Variables | JS Spells - BASIC | expressions, variables, conditionals, functions, arrays, objects, loops</title>
 
     <link rel="stylesheet" type="text/css" href="//noblackmagic.com/assets/css/nobm.min.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/addons.css">
     <link rel="stylesheet" type="text/css" href="//cdn-images.mailchimp.com/embedcode/slim-081711.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/jsbox-loading.css">
 
