--- a/basic/002-hello-world/index.html
+++ b/basic/002-hello-world/index.html
@@ -25,6 +25,10 @@
     <!-- Google Analytics -->
     <script src="//noblackmagic.com/assets/js/qs.min.js?v1"></script>
     <script src="//noblackmagic.com/assets/js/ga.min.js?v1&ua=UA-52991368-2"></script>
+    
+    <script>
+    var fbCommentsUrl = 'http://js-spells.noblackmagic.com';
+    </script>
 </head>
 
 <body>
@@ -76,6 +80,7 @@
                         <pre data-test="testHelloWorld()">alert the "Hello World" string</pre>
                         <pre data-js></pre>
                     </div>
+                    <script src="//noblackmagic.com/assets/js/fb-comments.min.js?thread=basic/hello-world/alert"></script>
                 </div>
             </section>
 
@@ -86,7 +91,8 @@
     <!-- Javascript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53bbbbe907e85e8c"></script>
+    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53bbbbe907e85e8c"></script>
+    <script src="//noblackmagic.com/assets/js/fb-sdk.min.js?appId=195324993947451"></script>
     
     <!-- JSBox -->
     <link rel="stylesheet" href="//jsbox.politejs.com/jsbox/latest-stable/jquery.jsbox.min.css">
