added disqus general thread and navigation

--- a/basic/index.html
+++ b/basic/index.html
@@ -49,10 +49,10 @@
             <section>
                 <h2>Basic Javascript Tutorials</h2>
                 <ul>
-                    <li><a href="/basic/001-environment/" title="javascript environment">The Environment:</a> where do Javascript lives?</li>
-                    <li><a href="/basic/002-hello-world/" title="javascript hello world">Hello World:</a> hands on code!</li>
-                    <li><a href="/basic/003-expressions/" title="javascript code expressions">Expressions:</a> let Js do the math!</li>
-                    <li><a href="/basic/004-variables/" title="javascript variables tutorial">Variables:</a> everything needs a box</li>
+                    <li><a href="/basic/001-environment/" title="Javascript Environment Tutorial">The Environment:</a> where do Javascript lives?</li>
+                    <li><a href="/basic/002-hello-world/" title="Javascript Hello World Tutorial">Hello World:</a> hands on code!</li>
+                    <li><a href="/basic/003-expressions/" title="Javascript Code Expressions and Operators Tutorial">Code Expressions:</a> let Js do the math!</li>
+                    <li><a href="/basic/004-variables/" title="Javascript Variables Tutorial">Variables:</a> everything needs a box</li>
                 </ul>
             </section>
 
