--- a/basic/004-variables/index.html
+++ b/basic/004-variables/index.html
@@ -143,7 +143,7 @@ var result = num1 + num2;</pre>
                     <div data-jsbox data-jsbox-scripts="jsbox-tests.js?v1">
                         <pre data-test="testReadVariableContent()">complete the existing code in order to <strong>create</strong> a <code>fullName</code> variable which should contains "Luke Skywalker"</pre>
                         <pre data-js>var name = 'Luke';
-    var surname = 'Skywalker';</pre>
+var surname = 'Skywalker';</pre>
 
                     </div>
                     <script src="//noblackmagic.com/assets/js/fb-comments.min.js?thread=basic/variables/read"></script>
@@ -155,6 +155,24 @@ var result = num1 + num2;</pre>
                 <p>
                     When you 
                 </p>
+            </section>
+            
+            <section class="go-tutorial clearfix">
+                <a class="prev" href="../003-expressions/" title="Javascript Code Expressions and Operators Tutorial">&laquo; Code Expressions</a>
+<!--                <a class="next" href="../004-variables/" title="Javascript Variables Tutorial">Variables &raquo;</a>-->
+            </section>
+            
+            <section dlass="disqus-thread">
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    var disqus_shortname = 'js-spells';
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
             </section>
 
         </article>
