--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>JS Spells | Javascript From Scratch tutorials, examples and exercises</title>
 
     <link rel="stylesheet" href="//noblackmagic.com/assets/css/nobm.min.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/addons.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/addons.css">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
     <!--  Icons -->
@@ -56,19 +56,13 @@
             </section>
             
             <section>
-                <h2>JS Levels</h2>
+                <h2>Javascript Tutorials</h2>
                 <ul>
-                    <li><a href="/basic/" title="javascript basic building blocks: variables, conditionals, functions, arrays, objects">Basic:</a> <strong>code</strong> building blocks</li>
-                    <li><a href="#">Medium:</a> <strong>interaction</strong> building blocks</li>
-                    <li><a href="#">Advanced:</a> <strong>applications</strong> building blocks</li>
+                    <li><a href="/001-environment/" title="Javascript Environment Tutorial">The Environment:</a> where do Javascript lives?</li>
+                    <li><a href="/002-hello-world/" title="Javascript Hello World Tutorial">Hello World:</a> hands on code!</li>
+                    <li><a href="/003-expressions/" title="Javascript Code Expressions and Operators Tutorial">Code Expressions:</a> let Js do the math!</li>
+                    <li><a href="/004-variables/" title="Javascript Variables Tutorial">Variables:</a> everything needs a box</li>
                 </ul>
-            </section>
-            
-            <section>
-                <h2>The Web Environment</h2>
-                <p>
-                    here we are talking about the web page...
-                </p>
             </section>
 
         </article>
