use disqus script from noBlackMagic.com

--- a/001-environment/index.html
+++ b/001-environment/index.html
@@ -32,7 +32,7 @@
     <div class="wrapper">
         <header>
             <script src="//noblackmagic.com/assets/js/nobm.min.js?v1"></script>
-            <script src="/assets/js/spells-menu.js"></script>
+            <script src="//noblackmagic.com/assets/js/include.min.js?v1&url=/menu.html"></script>
             <script src="//noblackmagic.com/assets/js/mchimp.min.js?v1"></script>
             <div class="addthis_sharing_toolbox" style="margin-left:5px;margin-top:30px;text-align:center"></div>
         </header>
@@ -135,7 +135,7 @@ you can run it but there is no exercise to solve.
                     ask for help or give help to other people:
                 </p>
                 
-                <script src="/assets/js/disqus.js?blog=js-spells&thread=environment/example"></script>
+                <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=environment/example"></script>
                 
                 <p>
                     When you try to solve an exercise <strong>you can succeed or you can fail</strong>.
