--- a/002-hello-world/index.html
+++ b/002-hello-world/index.html
@@ -33,7 +33,7 @@
     <div class="wrapper">
         <header>
             <script src="//noblackmagic.com/assets/js/nobm.min.js?v1"></script>
-            <script src="/assets/js/spells-menu.js"></script>
+            <script src="//noblackmagic.com/assets/js/include.min.js?v1&url=/menu.html"></script>
             <script src="//noblackmagic.com/assets/js/mchimp.min.js?v1"></script>
             <div class="addthis_sharing_toolbox" style="margin-left:5px;margin-top:30px;text-align:center"></div>
         </header>
@@ -77,7 +77,7 @@
                         <pre data-test="testHelloWorld()">alert the "Hello World" string</pre>
                         <pre data-js></pre>
                     </div>
-                    <script src="/assets/js/disqus.js?blog=js-spells&thread=hello-world/alert"></script>
+                    <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=hello-world/alert"></script>
                 </div>
             </section>
             
