--- a/003-expressions/index.html
+++ b/003-expressions/index.html
@@ -33,7 +33,7 @@
     <div class="wrapper">
         <header>
             <script src="//noblackmagic.com/assets/js/nobm.min.js?v1"></script>
-            <script src="/assets/js/spells-menu.js"></script>
+            <script src="//noblackmagic.com/assets/js/include.min.js?v1&url=/menu.html"></script>
             <script src="//noblackmagic.com/assets/js/mchimp.min.js?v1"></script>
             <div class="addthis_sharing_toolbox" style="margin-left:5px;margin-top:30px;text-align:center"></div>
         </header>
