data types string in place

--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,8 @@
         <a href="/002-hello-world/" title="javascript hello world">
         Hello World 
     </a></li>
-    <li>&raquo; 
-        <a href="/003-expressions/" title="javascript code expressions">
-        Code Expressions 
+    <li>&raquo;
+        <a href="/003-data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types
     </a></li>
     <li>&raquo; 
         <a href="/004-variables/" title="javascript variables tutorial">
