--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ul>
                     <li><a href="/001-environment/" title="Javascript Environment Tutorial">The Environment:</a> where do Javascript lives?</li>
                     <li><a href="/002-hello-world/" title="Javascript Hello World Tutorial">Hello World:</a> hands on code!</li>
-                    <li><a href="/003-expressions/" title="Javascript Code Expressions and Operators Tutorial">Code Expressions:</a> let Js do the math!</li>
+                    <li><a href="/003-data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types:</a> the basic syntax!</li>
                     <li><a href="/004-variables/" title="Javascript Variables Tutorial">Variables:</a> everything needs a box</li>
                 </ul>
             </section>
