--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <section>
                 <h2>Javascript Tutorials</h2>
                 <ul>
-                    <li><a href="/001-environment/" title="Javascript Environment Tutorial">The Environment:</a> where do Javascript lives?</li>
-                    <li><a href="/002-hello-world/" title="Javascript Hello World Tutorial">Hello World:</a> hands on code!</li>
-                    <li><a href="/003-data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types:</a> the basic syntax!</li>
-                    <li><a href="/004-variables/" title="Javascript Variables Tutorial">Variables:</a> everything needs a box</li>
+                    <li><a href="/environment/" title="Javascript Environment Tutorial">The Environment:</a> where do Javascript lives?</li>
+                    <li><a href="/hello-world/" title="Javascript Hello World Tutorial">Hello World:</a> hands on code!</li>
+                    <li><a href="/data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types:</a> the basic syntax!</li>
+                    <li><a href="/variables/" title="Javascript Variables Tutorial">Variables:</a> everything needs a box</li>
                 </ul>
             </section>
             
