--- a/menu.html
+++ b/menu.html
@@ -7,18 +7,18 @@
 <hr>
 <ul>
     <li>&raquo; 
-        <a href="/001-environment/" title="javascript environment">
+        <a href="/environment/" title="javascript environment">
         The Environment 
     </a></li>
     <li>&raquo; 
-        <a href="/002-hello-world/" title="javascript hello world">
+        <a href="/hello-world/" title="javascript hello world">
         Hello World 
     </a></li>
     <li>&raquo;
-        <a href="/003-data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types
+        <a href="/data-types/" title="Javascript Data Types: string, number, boolean, arrays, objects">Data Types
     </a></li>
     <li>&raquo; 
-        <a href="/004-variables/" title="javascript variables tutorial">
+        <a href="/variables/" title="javascript variables tutorial">
         Variables 
     </a></li>
     <li>&raquo; Conditionals</li>
