disqus hello-world

--- a/disqus/hello-world_alert.html
+++ b/disqus/hello-world_alert.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Uppercase your name | Data Types | JS Spells</title>
+    <title>Hello World (alert) | JS Spells</title>
 
     <link rel="stylesheet" type="text/css" href="//noblackmagic.com/assets/css/nobm.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/addons.css">
@@ -40,7 +40,7 @@
 
             <section class="start-block-article">
                 <h1>Discussion Board <small>JS Spells</small></h1>
-                <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=data-types/string/uppercase&force=true"></script>
+                <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=hello-world/alert&force=true"></script>
             </section>
             
         </article>
