disqus variables, noindex on disqus threads

--- a/disqus/data-types_string_concatenate.html
+++ b/disqus/data-types_string_concatenate.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    
+    <meta name="robots" content="noindex">
 
     <title>Write your Full Name as String concatenation | Data Types | JS Spells</title>
 
