--- a/disqus/variables_create.html
+++ b/disqus/variables_create.html
@@ -8,7 +8,7 @@
     
     <meta name="robots" content="noindex">
 
-    <title>Uppercase your name | Data Types | JS Spells</title>
+    <title>Create a variable | JS Spells</title>
 
     <link rel="stylesheet" type="text/css" href="//noblackmagic.com/assets/css/nobm.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/addons.css">
@@ -42,7 +42,7 @@
 
             <section class="start-block-article">
                 <h1>Discussion Board <small>JS Spells</small></h1>
-                <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=data-types/string/uppercase&force=true"></script>
+                <script src="//noblackmagic.com/assets/js/disqus.js?blog=js-spells&thread=variables/create&force=true"></script>
             </section>
             
         </article>
